# client_tester

./: .env  Cargo.toml  Makefile  docker-compose.yaml
conf/nginx/: cert.pem  key.pem  nginx.conf
conf/ninjapanda/: Dockerfile  config.yaml
conf/otel/: otel-collector-config.yaml
conf/prometheus/: prometheus.yml
ztclient/common/: Cargo.toml
ztclient/common/src/: containers.rs  errors.rs  intgates.rs  lib.rs  models.rs  ninjapanda.rs  users.rs  ztclient.rs
ztclient/tester/: Cargo.toml
ztclient/tester/src/: extra_stuff.rs  main.rs  test01.rs
ztclient/tester/tests/: cmd_line.rs  equivalency.rs  login.rs  machine_delete.rs  notifications.rs  policies.rs  preauth-tokens.rs  zt_con.rs
