[package]
name = "ztclient_tester"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
bollard.workspace = true
clap = { workspace = true , features = ["derive", "env"] }
dotenv.workspace = true
env_logger.workspace = true
envy.workspace = true
futures.workspace = true
futures-core.workspace = true
log.workspace = true
reqwest = { workspace=true, features = ["json"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
ztclient_common = { path = "../common" }
rstest = { workspace = true }
similar-asserts = { workspace = true }
assert2 = { workspace = true }

[dependencies.uuid]
workspace = true
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
async-std = { version = "1.12", features = ["attributes"] }
